--- a/main.html
+++ b/main.html
@@ -3,45 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LotusCurry</title>
+    <title>Your Official Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- Background Image Upload -->
-    <div class="background">
-        <input type="file" id="bgUpload" accept="image/*" hidden>
-        <label for="bgUpload" class="upload-btn">Upload Background</label>
-    </div>
+    <!-- Logo -->
+    <img id="logo" class="logo" src="your-logo.jpg" alt="Your Logo">
 
-    <!-- Logo Upload -->
-    <div class="logo-container">
-        <input type="file" id="logoUpload" accept="image/*" hidden>
-        <label for="logoUpload" class="upload-logo-btn">Upload Logo</label>
-        <img id="logo" src="default-logo.png" alt="Your Logo">
-    </div>
-
-    <!-- Main Content -->
-    <div class="content">
-        <h1>Your Artist Name</h1>
-
-        <!-- Social Media Links -->
-        <div class="social-links">
-            <a href="https://www.instagram.com/lotuscurry/" target="_blank">Instagram</a>
-            <a href="https://www.tiktok.com/@lotuscurry" target="_blank">TikTok</a>
-            <a href="https://www.youtube.com/@erikdoesnirvana" target="_blank">YouTube</a>
-            <a href="https://soundcloud.com/lotus-curry-768763312" target="_blank">SoundCloud</a>
-            <a href="https://www.patreon.com/c/lotuscurry/shop" target="_blank">Patreon</a>
-        </div>
-        <!-- Email Subscription Form -->
-        <div class="subscribe-box">
-            <form action="http://eepurl.com/jbxafI" method="post" target="_blank">
-                <input type="email" name="EMAIL" placeholder="Enter your email" required>
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+    <!-- Social Media Links -->
+    <div class="social-links">
+        <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Instagram</a>
+        <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
+        <a href="https://facebook.com/YOUR_FACEBOOK" target="_blank">Facebook</a>
+        <a href="https://youtube.com/YOUR_YOUTUBE" target="_blank">YouTube</a>
