--- a/main.html
+++ b/main.html
@@ -17,3 +17,19 @@
         <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
         <a href="https://facebook.com/YOUR_FACEBOOK" target="_blank">Facebook</a>
         <a href="https://youtube.com/YOUR_YOUTUBE" target="_blank">YouTube</a>
+    </div>
+
+    <!-- Store (Patreon) Button -->
+    <a href="https://patreon.com/YOUR_PATREON" target="_blank" class="store-link">Visit My Store</a>
+
+    <!-- Email Subscription Box (Mailchimp) -->
+    <div class="subscribe-box">
+        <form action="https://YOUR-MAILCHIMP-URL" method="post">
+            <input type="email" name="EMAIL" placeholder="Enter your email" required>
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
