--- a/main.html
+++ b/main.html
@@ -9,22 +9,22 @@
 <body>
 
     <!-- Logo -->
-    <img id="logo" class="logo" src="your-logo.jpg" alt="Your Logo">
+    <img id="logo" class="logo" src="https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg.png" alt="Your Logo">
 
     <!-- Social Media Links -->
     <div class="social-links">
-        <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Instagram</a>
-        <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
-        <a href="https://facebook.com/YOUR_FACEBOOK" target="_blank">Facebook</a>
-        <a href="https://youtube.com/YOUR_YOUTUBE" target="_blank">YouTube</a>
+        <a href="https://www.instagram.com/lotuscurry/" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@lotuscurry" target="_blank">TikTok</a>
+        <a href="https://soundcloud.com/lotus-curry-768763312" target="_blank">SoundCloud</a>
+        <a href="https://www.youtube.com/@erikdoesnirvana" target="_blank">YouTube</a>
     </div>
 
     <!-- Store (Patreon) Button -->
-    <a href="https://patreon.com/YOUR_PATREON" target="_blank" class="store-link">Visit My Store</a>
+    <a href="https://www.patreon.com/c/lotuscurry/shop" target="_blank" class="store-link">Visit My Store</a>
 
     <!-- Email Subscription Box (Mailchimp) -->
     <div class="subscribe-box">
-        <form action="https://YOUR-MAILCHIMP-URL" method="post">
+        <form action="http://eepurl.com/jbxafI" method="post">
             <input type="email" name="EMAIL" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
