--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOtusCuRRY</title>
-    <link rel="* General Styling */
+    <link rel="stylesheet" href="styles.css">
+</head>
+<style>
+  body{ * General Styling */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -88,9 +91,9 @@ body {
 
 .subscribe-box button:hover {
     background: #cc3700;
-}" href="styles.css">
-</head>
-<body>
+}
+       </style>
+    </head>
 
     <!-- Logo -->
     <img id="logo" class="logo" src="https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg.png" alt="Your Logo">
