--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 }
 
 #logo {
-    content: url('your-logo.jpg'); /* Fixed logo */
+    content: url('https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg'); /* Fixed logo */
     width: 120px; /* Adjust as needed */
     height: auto;
 }
