--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>LOtusCuRRY</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+  <script>
+    // Your JavaScript code here console.log (// Set the background image (Your Guitar Photo)
+document.body.style.backgroundImage = "url('https://github.com/erra0284/lc-repository/blob/main/your-guitar-photo.jpg')";
+
+// Set the logo image (Your Custom Logo)
+document.getElementById('logo').src = "your-logo.jpg";
+
+// Function to open the Patreon Store
+document.getElementById('storeButton').addEventListener('click', function() {
+    window.open('https://patreon.com/yourpatreon', '_blank');
+}););
+  </script>
 <style>
   body{ * General Styling */
 body {
