--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 document.body.style.backgroundImage = "url('https://github.com/erra0284/lc-repository/blob/main/your-guitar-photo.jpg')";
 
 // Set the logo image (Your Custom Logo)
-document.getElementById('logo').src = "your-logo.jpg";
+document.getElementById('logo').src = "https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg";
 
 // Function to open the Patreon Store
 document.getElementById('storeButton').addEventListener('click', function() {
