--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
 
 /* Logo Styling */
 .logo {
-    width: 150px; /* Adjust size as needed */
+    width: 150px; 
     height: auto;
     display: block;
     margin: 20px auto;
@@ -40,7 +40,7 @@ body {
 
 #logo {
     content: url('https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg'); /* Fixed logo */
-    width: 120px; /* Adjust as needed */
+    width: 120px; 
     height: auto;
 }
 
