--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     // Your JavaScript code here console.log (// Set the background image (Your Guitar Photo)
 document.body.style.backgroundImage = "url('https://github.com/erra0284/lc-repository/blob/main/your-guitar-photo.jpg')";
 
-// Set the logo image (Your Custom Logo)
-document.getElementById('logo').src = "https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg";
+// Set the logo image (https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg)
+document.getElementById('logo').src = ("https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg";)
 
 // Function to open the Patreon Store
 document.getElementById('storeButton').addEventListener('click', function() {
