--- a/index.html
+++ b/index.html
@@ -3,98 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Your website description here">
+    <meta name="keywords" content="your, keywords, here">
     <title>LOtusCuRRY</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* General Styling */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f8f8f8;
-            background-image: url('https://github.com/erra0284/lc-repository/blob/main/your-guitar-photo.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
-
-        /* Logo Styling */
-        .logo {
-            width: 150px;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
-
-        #logo {
-            width: 120px;
-            height: auto;
-        }
-
-        /* Social Links */
-        .social-links a {
-            display: inline-block;
-            margin: 10px;
-            color: #333;
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .social-links a:hover {
-            color: #ff4500;
-        }
-
-        /* Store (Patreon) Button */
-        .store-link {
-            background: #ff4500;
-            padding: 10px 15px;
-            border-radius: 5px;
-            color: white !important;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: 0.3s;
-            display: inline-block;
-            text-decoration: none;
-            margin-top: 20px;
-        }
-
-        .store-link:hover {
-            background: #cc3700;
-        }
-
-        /* Email Subscription Box */
-        .subscribe-box {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-            display: inline-block;
-        }
-
-        .subscribe-box input[type="email"] {
-            padding: 10px;
-            width: 250px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .subscribe-box button {
-            padding: 10px 15px;
-            border: none;
-            background: #ff4500;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .subscribe-box button:hover {
-            background: #cc3700;
-        }
-    </style>
 </head>
 <body>
     <!-- Logo -->
-    <img id="logo" class="logo" src="https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg" alt="Your Logo" />
+    <img id="logo" class="logo" src="your-logo.jpg" alt="Your Logo" />
 
     <!-- Social Media Links -->
     <div class="social-links">
@@ -116,15 +32,11 @@
     </div>
 
     <script>
-        // Set the background image (Your Guitar Photo)
-        document.body.style.backgroundImage = "url('https://github.com/erra0284/lc-repository/blob/main/your-guitar-photo.jpg')";
-
-        // Set the logo image
-        document.getElementById('logo').src = "https://github.com/erra0284/lc-repository/blob/main/your-logo.jpg";
-
-        // Function to open the Patreon Store
-        document.getElementById('storeButton').addEventListener('click', function() {
-            window.open('https://patreon.com/yourpatreon', '_blank');
+        document.addEventListener('DOMContentLoaded', function() {
+            // Function to open the Patreon Store
+            document.getElementById('storeButton').addEventListener('click', function() {
+                window.open('https://patreon.com/yourpatreon', '_blank');
+            });
         });
     </script>
 </body>
